pkl-core/src/test/files/LanguageSnippetTests/input/errors/spreadSyntaxDuplicateEntry2.pkl
local source {
  ["foo"] = 1
}

res: Mapping = new {
  ["foo"] = 2
  ...source
}
